# 5xwg0-project-template

./: README.md  pyproject.toml
.github/workflows/: build-and-test.yml
src/power_system_simulation/: simple_function.py
tests/: test_simple_function.py
