[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "power-system-simulation"
authors = [{name = "TU/e EES group"}]
description = "Student project for power system simulation"
readme = "README.md"
license = {text = "BSD License (BSD)"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License"
]
requires-python = ">=3.12"
dependencies = []
version = "0.1"

[project.optional-dependencies]
dev = [
  'pytest',
  'black',
  'isort'
]

[tool.setuptools.packages.find]
where = ["src"] 
namespaces = false 

[tool.black]
line-length = 120
target-version = ['py312']
