[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "power-system-simulation"
authors = [{name = "TU/e EES group"}]
description = "Student project for power system simulation"
readme = "README.md"
license = {text = "BSD License (BSD)"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License"
]
requires-python = ">=3.12"
dependencies = []
version = "0.1"

[project.optional-dependencies]
dev = [
  'pytest',
  'black',
  'isort',
  'pylint'
]

[tool.setuptools.packages.find]
where = ["src"] 
namespaces = false 

[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
profile = "black"
combine_as_imports = true
line_length = 120

[tool.pylint]
max-line-length = 120

